[package]
name = "backend-takehome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# web framework and dependency
axum = "0.6"
tokio = { version = "1.0", features = ["full"] }

# web client
reqwest = { version = "0.11", features = ["json"] }

# (de)serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# misc (middleware, time, etc. -- other things you might need)
chrono = "0.4"
version-compare = "0.1.1"
tower-http = { version = "0.4", features = ["cors"] }
http = "0.2"
dotenv = "0.15"